// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DetoxRuntimeError should format all fields to a single message: .toString() - empty object 1`] = `
"
DetoxRuntimeError: "
`;

exports[`DetoxRuntimeError should format all fields to a single message: .toString() - message with debug info 1`] = `
"
DetoxRuntimeError: no filename was given to constructSafeFilename()

the arguments were: {
  \\"prefix\\": \\"detox - \\"
}"
`;

exports[`DetoxRuntimeError should format all fields to a single message: .toString() - message with hint 1`] = `
"
DetoxRuntimeError: Detox adapter to Jest is malfunctioning.

HINT: Make sure you register it as Jasmine reporter inside init.js:
-------------------------------------------------------------
jasmine.getEnv().addReporter(adapter);"
`;

exports[`DetoxRuntimeError should format all fields to a single message: .toString() - message with hint and debug info 1`] = `
"
DetoxRuntimeError: Invalid test summary was passed to detox.beforeEach(testSummary)
Expected to get an object of type: { title: string; fullName: string; status: \\"running\\" | \\"passed\\" | \\"failed\\"; }

HINT: Maybe you are still using an old undocumented signature detox.beforeEach(string, string, string) in init.js ?
See the article for the guidance: https://github.com/wix/detox/blob/master/docs/APIRef.TestLifecycle.md

testSummary was: \\"test name\\""
`;

exports[`DetoxRuntimeError should format all fields to a single message: .toString() - no args 1`] = `
"
DetoxRuntimeError: "
`;

exports[`DetoxRuntimeError should format all fields to a single message: .toString() - only message 1`] = `
"
DetoxRuntimeError: The video is not being recorded on device (emulator-5554) at path: /sdcard/712398.mp4"
`;

exports[`DetoxRuntimeError should format all fields to a single message: throw error - empty object 1`] = `"DetoxRuntimeError: "`;

exports[`DetoxRuntimeError should format all fields to a single message: throw error - message with debug info 1`] = `
"DetoxRuntimeError: no filename was given to constructSafeFilename()

the arguments were: {
  \\"prefix\\": \\"detox - \\"
}"
`;

exports[`DetoxRuntimeError should format all fields to a single message: throw error - message with hint 1`] = `
"DetoxRuntimeError: Detox adapter to Jest is malfunctioning.

HINT: Make sure you register it as Jasmine reporter inside init.js:
-------------------------------------------------------------
jasmine.getEnv().addReporter(adapter);"
`;

exports[`DetoxRuntimeError should format all fields to a single message: throw error - message with hint and debug info 1`] = `
"DetoxRuntimeError: Invalid test summary was passed to detox.beforeEach(testSummary)
Expected to get an object of type: { title: string; fullName: string; status: \\"running\\" | \\"passed\\" | \\"failed\\"; }

HINT: Maybe you are still using an old undocumented signature detox.beforeEach(string, string, string) in init.js ?
See the article for the guidance: https://github.com/wix/detox/blob/master/docs/APIRef.TestLifecycle.md

testSummary was: \\"test name\\""
`;

exports[`DetoxRuntimeError should format all fields to a single message: throw error - no args 1`] = `"DetoxRuntimeError: "`;

exports[`DetoxRuntimeError should format all fields to a single message: throw error - only message 1`] = `"DetoxRuntimeError: The video is not being recorded on device (emulator-5554) at path: /sdcard/712398.mp4"`;
